force-app/main/default/objects/RDP_HPricingHolderCompPricing__c/fields/PartMatl__c.field-meta.xml
<CustomField>
    <fullName>PartMatl__c</fullName>
    <label>PartMatl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>