force-app/main/default/objects/RDP_HPricingHolderCompPricing__c/fields/Prod__c.field-meta.xml
<CustomField>
    <fullName>Prod__c</fullName>
    <label>Prod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>