force-app/main/default/objects/RDP_HPricingHolderCompPricing__c/fields/Qty_LL__c.field-meta.xml
<CustomField>
    <fullName>Qty_LL__c</fullName>
    <label>Qty LL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>