force-app/main/default/objects/RDP_HPricingHolderCompPricing__c/fields/Qty_UL__c.field-meta.xml
<CustomField>
    <fullName>Qty_UL__c</fullName>
    <label>Qty UL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>