force-app/main/default/objects/RDP_HPricingHolderCompPricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prod__c</columns>
    <columns>Part__c</columns>
    <columns>Size__c</columns>
    <columns>Class__c</columns>
    <columns>PartMatl__c</columns>
    <columns>Qty_LL__c</columns>
    <columns>Qty_UL__c</columns>
    <columns>ListPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>